trunk/Archive2/37/fdb3ffd33feaa4/output
main.cpp: In function 'int main()':
main.cpp:30:10: error: could not convert 'c' from 'Box<Child>' to 'Box<Parent>'
     foo(c);
          ^
